z-index bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
         width: 100%;
         left: 0;
         right: 0;
-        z-index: 5;
+        z-index: 15;
         overflow: hidden;
         clip-path: inset(0% 0% 100% 0%);
         transition: clip-path .4s .5s ease-in-out;
@@ -121,8 +121,7 @@
 }
 
 .main {
-    position: relative;
-
+    
     .overlay {
         background: rgba(0, 0, 0, 0.445);
         position: fixed;
